--- a/m1/w1/d3/esercizio-d3/start-20220401T092253Z-001/start/index.html
+++ b/m1/w1/d3/esercizio-d3/start-20220401T092253Z-001/start/index.html
@@ -36,7 +36,7 @@
                         <img src="assets/img/whatsapp.svg" alt="" width="20" height="20"> <b>Whatsapp:</b> <a href="https://wa.me/0610203040" title="mandami un messaggio">06-10203040</a>
                     </address>
                     <p><b>Su di me:</b></p>
-                    <blockquote><p>"Sembra sempre impossibile, finché non viene fatto." <cite>(Nelson Mandela)</cite></p></blockquote>
+                    <blockquote class="quadrato"><p>"Sembra sempre impossibile, finché non viene fatto." <cite>(Nelson Mandela)</cite></p></blockquote>
                 </div>
 
                 <hr>
