--- a/m1/w1/d5/start-20220401T085759Z-001/start/index.html
+++ b/m1/w1/d5/start-20220401T085759Z-001/start/index.html
@@ -20,7 +20,7 @@
         </div> 
     </header>
     <main>
-            <nav>
+            <nav class="introduzione">
                 <h1>Corso Web Developer</h1>
                 <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze</p>
                 <button type="submit">Partiamo!</button>
@@ -81,9 +81,11 @@
             <i class="fa-solid fa-phone"></i><p><a href="tel+3911223456" title="numero di telefono">(+3911223456)</a></p>
 
             <i class="fa-solid fa-envelope"></i><p><a href="mailto:info@epicode.school" title="contattami per informazioni">info@epicode.school</a>
-                
+
             <i class="fa-solid fa-location-dot"></i></p>
             <p>Via Appia 1 - 00100 Roma (RM)</address></p>
+
+            <p>&copy 2021 immagini di<a href="http://Pixabay.com" target="_blank">Pixabay</a></p>.
     </footer>
 
 </body>
