--- a/m1/w1/d5/start-20220401T085759Z-001/consegna-d5/index.html
+++ b/m1/w1/d5/start-20220401T085759Z-001/consegna-d5/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/46d14da4e0.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -78,14 +80,13 @@
     <footer>
         <h2>Contattaci</h2>
         <address>
-            <i class="fa-solid fa-phone"></i><p><a href="tel+3911223456" title="numero di telefono">(+3911223456)</a></p>
+            <p class="telefono"><i class="fa-solid fa-phone"></i><a href="tel+3911223456" title="numero di telefono"> (+3911223456)</a></p>
 
-            <i class="fa-solid fa-envelope"></i><p><a href="mailto:info@epicode.school" title="contattami per informazioni">info@epicode.school</a>
+            <p><i class="fa-solid fa-envelope"></i><a href="mailto:info@epicode.school" title="contattami per informazioni"> info@epicode.school</a>
 
-            <i class="fa-solid fa-location-dot"></i></p>
-            <p>Via Appia 1 - 00100 Roma (RM)</address></p>
+            </p><i class="fa-solid fa-location-dot"></i> Via Appia 1 - 00100 Roma (RM)</address></p>
 
-            <p>&copy 2021 immagini di<a href="http://Pixabay.com" target="_blank">Pixabay</a></p>.
+            <p class="privacy">&copy 2021 immagini di <strong> Pixabay.</strong></p>.
     </footer>
 
 </body>
