--- a/m1/w2/d1/start/articolo.html
+++ b/m1/w2/d1/start/articolo.html
@@ -10,9 +10,12 @@
         <link rel="stylesheet" href="assets/css/all.css">
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/stile.css">
+        <link rel="stylesheet" href="assets/css/responsive.css">
+
     </head>
     <body id="top">
         <header>
+            <div class="container" id="solo-desktop">
             <div>
                 <img src="assets/img/logo.svg" alt="logo del blog" width="250" height="60">
                 <p>Epicode - Il blog dei developers</p>
@@ -110,6 +113,8 @@
             </article>
     
             <aside>
+                <div class="container" id="solo-desktop">
+
                 <h2>Articoli correlati</h2>
                 <div>
                     <a href="post2.html" title="Passaggi guidati per validare correttamente tutto il codice sviluppato">Validare il codice HTML</a>
@@ -134,6 +139,8 @@
         <hr>
 
         <footer>
+            <div class="container" id="solo-desktop">
+
             <p>Blog Epicode &copy;2021</p>
             <address>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233. <a href="mailto:info@epicode.school" title="contattami per informazioni/lavoro/privacy">info@epicode.school</a></address>
         </footer>
