--- a/m1/w2/d1/index.html
+++ b/m1/w2/d1/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width=device-width, inizial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/stile.css">
     <link rel="stylesheet" href="css/responsive.css">
-
 </head>
 <body>
 
@@ -19,11 +18,15 @@
         <div class="col"></div>
         <div class="col"></div>
         <div class="col"></div>
-
     </div>
-    <header>
+    
+    <div class="container">
+        <div class="test"></div>
+    </div>
 
-    </header>
-
+    <div class="container" id="solo-desktop">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ducimus rem totam earum eaque cumque eveniet laborum, enim dolore, architecto nostrum ea nihil ab ipsam pariatur possimus. Dolorum, ullam fugit?
+    </div>
+    
 </body>
 </html>
