--- a/m1/w2/d2/Lezione/Float/index.html
+++ b/m1/w2/d2/Lezione/Float/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <section>
-        
+
         <img src="https://picsum.photos/id/237/200/300">
         <img src="https://picsum.photos/id/237/200/300">
 
@@ -24,18 +24,39 @@
 
     </section>
 
-    <section>
+    <section class="blog article-left">
 
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
+        <article>1</article>
+        <article>2</article>
+        <article>3</article>
+        <article>4</article>
+        <article>5</article>
+        <article>6</article>
+        <article>7</article>
+        <article>8</article>
+
+        <hr class="clearfix">
 
     </section>
+
+    <section class="blog article-left">
+
+        <article>1</article>
+        <article>2</article>
+        <article>3</article>
+        <article>4</article>
+        <article>5</article>
+        <article>6</article>
+        <article>7</article>
+        <article>8</article>
+
+        <hr class="clearfix">
+
+    </section>
+
+    <div id="foto">
+
+    </div>
 
 </body>
 
