--- a/m1/w2/d3/Lezione/index.html
+++ b/m1/w2/d3/Lezione/index.html
@@ -11,6 +11,38 @@
 
 <body>
 
+    <h3>Flex direction row</h3>
+
+    <section id="n1" class="container">
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+    </section>
+
+    <h3>Flex direction column</h3>
+
+    <section id="n2" class="container">
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+    </section>
+
+    <h3>Flex direction row reverse</h3>
+
+    <section id="n3" class="container">
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+    </section>
+
+    <h3>Flex direction column reverse</h3>
+
+    <section id="n4" class="container">
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+    </section>
+
 </body>
 
 </html>
