--- a/m1/w2/d3/Esercizio/start-20220401T103137Z-001/start/articolo-grid.html
+++ b/m1/w2/d3/Esercizio/start-20220401T103137Z-001/start/articolo-grid.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/all.css">
-        <link rel="stylesheet" href="assets/css/reset.css">
-        <link rel="stylesheet" href="assets/css/stile.css">
-        <link rel="stylesheet" href="assets/css/grid.css">
+        <link rel="stylesheet" href="../start/assets/css/all.css">
+        <link rel="stylesheet" href="../start/assets/css/reset.css">
+        <link rel="stylesheet" href="../start/assets/css/stile.css">
+        <link rel="stylesheet" href="../start/assets/css/grid.css">
         <script src="https://kit.fontawesome.com/46d14da4e0.js" crossorigin="anonymous"></script>
     </head>
     <body id="top">
