--- a/m1/w2/d3/Lezione/grid/index.html
+++ b/m1/w2/d3/Lezione/grid/index.html
@@ -32,5 +32,17 @@
         <footer class="blocco">FOOTER</footer>
     </section>
 
+    <section id="n4" class="container">
+        <div class="blocco">1</div>
+        <div class="blocco">2</div>
+        <div class="blocco">3</div>
+        <div class="blocco">4</div>
+        <div class="blocco">5</div>
+        <div class="blocco">6</div>
+        <div class="blocco">7</div>
+        <div class="blocco">8</div>
+        <div class="blocco">9</div>
+    </section>
+
 </body>
 </html>
