--- a/m1/w2/d4/Esercizio/start1-20220323T100343Z-001/start1/postit.html
+++ b/m1/w2/d4/Esercizio/start1-20220323T100343Z-001/start1/postit.html
@@ -5,13 +5,31 @@
 <title>Esempio di lavagna con Post It</title>
 <meta name="description" content="Creazione di una lavagna con post animati al rollover">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="postit.css">
 </head>
 
 <body>
+
+    <main>
+
+    <section id="lavagna">
+
+        <div id="n1" class="postit-yellow"><h1>Task #1</h1><h3>Creare i post-it</h3></div>
+        <div id="n2" class="postit-green"><h1>Task #2</h1><h3>Colorarli</h3></div>
+        <div id="n3" class="postit-pink"><h1>Task #3</h1><h3>Affiancarli</h3></div>
+        <div id="n1" class="postit-yellow"><h1>Task #4</h1><h3>Spaziarli</h3></div>
+        <div id="n2" class="postit-green"><h1>Task #5</h1><h3>Ombreggiarli</h3></div>
+        <div id="n4" class="postit-blue"><h1>Task #6</h1><h3>Ruotarli</h3></div>
+        <div id="n3" class="postit-pink"><h1>Task #7</h1><h3>Animarli</h3></div>
+        <div id="n4" class="postit-blue"><h1>Task #8</h1><h3>Testarli</h3></div>
+
+    </section>
+
+    </main>
 
 </body>
 </html>
