--- a/m1/w2/d4/Esercizio/start2-20220323T100354Z-001/start2/frase.html
+++ b/m1/w2/d4/Esercizio/start2-20220323T100354Z-001/start2/frase.html
@@ -5,7 +5,8 @@
 		<title>Esempio di testo a rotazione</title>
 		<meta name="description" content="Creazione di uno slogan con testo a rotazione sfruttando le animazioni CSS">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="frase.css">
@@ -19,11 +20,11 @@
 					attenzione, meticolosità, precisione
 					<br>
 					ed un pizzico di originalità
-					<span class="parole">
-						<i>interfacce web</i>
-						<i>single page app</i>
-						<i>app native</i>
-					</span>
+					<div class="parole">
+						<i id="parola1" class="parola">interfacce web</i>
+						<i id="parola2" class="parola">single page app</i>
+						<i id="parola3" class="parola">app native</i>
+					</div>
 				</p>
 			</div>
 		</main>
