--- a/m1/w2/d5/start-20220323T114750Z-001/start/index.html
+++ b/m1/w2/d5/start-20220323T114750Z-001/start/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Epicode - Formazione Web Developer</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Epicode School: il punto di partenza per la tua professione di Developer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,11 +28,23 @@
         <img src="assets/images/logo.png" alt="Logo Epicode" width="100">
       </div>
 
+      <div>
+
       <nav>
-        <a href="index.html">Home</a></li>
-        <a href="chi-siamo.html">Chi Siamo</a></li>
-        <a href="contatti.html">Contatti</a></li>
+      
+      <label for="toggle"></label><i class="fa-solid fa-ellipsis"></i><input id="toggle" type="checkbox">
+
+        <ul id="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="chi-siamo.html">Chi Siamo</a></li>
+        <li><a href="contatti.html">Contatti</a></li>
+        <li><a href="https://join.epicode.com/corsi/full-stack-developer-04-22/?amitem=corsi" id="registrati">Registrati</a></li>
+
+      </ul>
+
       </nav>
+
+    </div>
 
     </section>
 
@@ -105,10 +118,6 @@
         <p><i class="fa-solid fa-circle-xmark"></i><h3>Chi non sarai</h3></p>
        <p><h4>Il nerd incollato allo schermo</h4></p>
       </div>
-
-    </section>
-    
-    </section>
 
     </section>
 
