--- a/m2/w2/d3/Lezione/progetto2/index.html
+++ b/m2/w2/d3/Lezione/progetto2/index.html
@@ -9,7 +9,28 @@
 </head>
 <body>
 
+    <header>
+
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Chi siamo</a></li>
+            <li><a href="">Contatti</a></li>
+        </ul>
+
+    </header>
     <h1>prova</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore quidem necessitatibus earum aperiam explicabo eveniet vel nam iure ea eaque perspiciatis ipsam aspernatur, recusandae aliquam, officiis nihil pariatur dolore? Non.</p>
+
+    <div class="blocco"></div>
+    <div class="blocco"></div>
+    <div class="blocco"></div>
+    <div class="blocco"></div>
+
+    <div class="quadrato"></div>
+    <div class="quadrato"></div>
+    <div class="quadrato"></div>
+    <div class="quadrato"></div>
     
 </body>
 </html>
