--- a/m2/w2/d3/Homework-m2-w2-d3/index.html
+++ b/m2/w2/d3/Homework-m2-w2-d3/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section>
-        <img id="img" src="immagini/pexels-邱-韬-356269.jpg" alt="">
+        <img id="img" src="immagini/ciliegio.jpg" alt="">
     </section>
 
     <script src="js/script.js"></script>
