--- a/m2/w2/d5/Homework-M2-W2-D5/index.html
+++ b/m2/w2/d5/Homework-M2-W2-D5/index.html
@@ -8,6 +8,9 @@
   <title>Homework M2-W2-D5</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Squada+One&display=swap" rel="stylesheet">
 
 </head>
 
@@ -29,7 +32,7 @@
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">This is Me!</a>
-              <a class="nav-link" href="#">Collaborazioni</a>
+              <a class="nav-link" href="#">Collabs</a>
               <a class="nav-link" href="#">Testimonianze</a>
               <i class="bi bi-linkedin m-2"></i>
               <i class="bi bi-twitter m-2"></i>
@@ -43,16 +46,16 @@
     <div class="container xxl bd-gutter mt-3 my-md-4 bd-layout">
 
       <!-- SEZIONE PRIMO PIANO -->
-      <main>
+      <main id="sezioni-rosa" class="shadow mb-5">
 
-        <div class="row m-3">
-          <div class="col-6 col-md-6 col-xl-3 my-auto">
-            <img class="img-fluid shadow p-3 mb-5" src="immagini/pexels-dids-3737703.jpg" alt="">
+        <div class="row m-3 row-lg py-5">
+          <div class="col-12 col-md-6 col-xl-3 my-auto">
+            <img class="img-fluid shadow mb-5" src="immagini/pexels-dids-3737703.jpg" alt="">
           </div>
-          <div class="col-6 col-s-2 col-md-6 col-xl-3 my-auto">
-            <img class="img-fluid shadow p-3 mb-5 " src="immagini/pexels-karolina-grabowska-4041387.jpg" alt="">
+          <div id="immagine-invisible" class="col-md-6 col-xl-3 my-auto">
+            <img class="img-fluid shadow mb-5 " src="immagini/pexels-karolina-grabowska-4041387.jpg" alt="">
           </div>
-          
+
           <div class="col-md-12 col-xl-6 py-3 px-3 my-auto">
 
             <h1 class="mb-4 fs-1 text-center">This is me!</h1>
@@ -64,7 +67,7 @@
               placeat adipisci eveniet.
             </p>
 
-            <div class="dropdown-divider"></div>
+            <div id="divider1" class="dropdown-divider"></div>
           </div>
         </div>
 
@@ -72,93 +75,121 @@
 
       <!-- SEZIONE PARTNERSHIP -->
 
-      <section class="partnership">
+      <section class="partnership shadow mb-5 pb-5 bg-light">
 
-          <h3 class="mb-4 fs-2 text-center pt-5">Le mie collaborazioni</h3>
+        <h3 class="fs-1 text-center pt-5">Le mie collaborazioni</h3>
 
-        <div class="row m-3 py-5">
+        <div id="divider2" class="dropdown-divider"></div>
 
-          <div class="col-2 col-lg-3 my-auto"></div>
-          <div class="col-4 col-lg-3 my-auto">
-            <img class="img-fluid shadow mb-5" src="immagini/Deloitte-Logo.png" alt="">
-          </div>
-          <div class="col-4 col-lg-3 my-auto">
-            <img class="img-fluid shadow mb-5 bg-light" src="immagini/epicode.png" alt="">
-          </div>
-          <div class="col-2 col-lg-3 my-auto"></div>
 
-          <div class="col-2 col-lg-3 my-auto"></div>
-          <div class="col-4 col-lg-3 my-auto">
-            <img class="img-fluid shadow mb-5" src="immagini/logo-pantone-llc-company-vector-editorial-illustration-format-236293900.jpg" alt="">
+        <div class="row m-3">
+
+          <div class="col-2 col-lg-3 col-xl-4 my-auto"></div>
+          <div class="col-4 col-lg-3 col-xl-2 my-auto">
+            <img class="img-fluid"
+              src="immagini/logo-pantone-llc-company-vector-editorial-illustration-format-236293900.png" alt="">
           </div>
-          <div class="col-4 col-lg-3 my-auto">
-            <img class="img-fluid shadow mb-5" src="immagini/new-logo-hero-1920.png" alt="">
+          <div class="col-4 col-lg-3 col-xl-2 my-auto">
+            <img class="img-fluid" src="immagini/Just-Eat-Logo.png" alt="">
           </div>
-          <div class="col-2 col-lg-3 my-auto"></div>
-          
+          <div class="col-2 col-lg-3 col-xl-4 my-auto"></div>
+
+          <div class="col-2 col-lg-3 col-xl-4 my-auto"></div>
+          <div class="col-4 col-lg-3 col-xl-2 my-auto">
+            <img class="img-fluid" src="immagini/Deloitte-Logo.png" alt="">
+          </div>
+          <div class="col-4 col-lg-3 col-xl-2 my-auto">
+            <img class="img-fluid" src="immagini/epicode.png" alt="">
+          </div>
+          <div class="col-2 col-lg-3 col-xl-4 my-auto"></div>
+
 
         </div>
-
-        <div class="dropdown-divider"></div>
-
 
         <!-- CAROSELLO -->
 
       </section class="carosello">
 
-      <div id="carouselExampleCaptions" class="carousel slide m-5 py-5" data-bs-ride="false">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide my-5 shadow mb-5 bg-light"
+        data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class=""
-            aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+            aria-label="Slide 1" aria-current="true"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"
             class=""></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"
-            class="active" aria-current="true"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"
+            class=""></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="https://picsum.photos/id/237/200/300" class="d-block w-100" alt="...">
+
+            <img class="img-fluid my-auto p-5" src="immagini/carosello (2).jpg" alt="">
+
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <div id="testi-carosello">
+                <h5>Testimonianza1</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda debitis asperiores doloremque
+                  perspiciatis. Atque nulla voluptatem fuga, doloribus ducimus ullam est dicta itaque consequatur
+                  nostrum ipsam quasi esse autem sunt.
+                  Aliquam, nulla saepe vero animi incidunt, quas sed nobis, magnam assumenda sapiente mollitia culpa
+                  dolore fuga obcaecati quisquam reiciendis. Nam, corporis quo voluptate consectetur mollitia autem esse
+                  dolorem cupiditate quibusdam?</p>
+              </div>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="https://picsum.photos/seed/picsum/200/300" class="d-block w-100" alt="...">
+            <img class="img-fluid my-auto p-5" src="immagini/carosello (3).jpg" alt="">
+
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <div id="testi-carosello">
+                <h5>Testimonianza2</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda debitis asperiores doloremque
+                  perspiciatis. Atque nulla voluptatem fuga, doloribus ducimus ullam est dicta itaque consequatur
+                  nostrum ipsam quasi esse autem sunt.
+                  Aliquam, nulla saepe vero animi incidunt, quas sed nobis, magnam assumenda sapiente mollitia culpa
+                  dolore fuga obcaecati quisquam reiciendis. Nam, corporis quo voluptate consectetur mollitia autem esse
+                  dolorem cupiditate quibusdam?</p>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://picsum.photos/200/300?grayscale" class="d-block w-100" alt="...">
+
+            <img class="img-fluid my-auto p-5" src="immagini/carosello (1).jpg" alt="">
+
+
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <div id="testi-carosello">
+                <h5>Testimonianza3</h5>
+                <p class>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda debitis asperiores
+                  doloremque perspiciatis. Atque nulla voluptatem fuga, doloribus ducimus ullam est dicta itaque
+                  consequatur nostrum ipsam quasi esse autem sunt.
+                  Aliquam, nulla saepe vero animi incidunt, quas sed nobis, magnam assumenda sapiente mollitia culpa
+                  dolore fuga obcaecati quisquam reiciendis. Nam, corporis quo voluptate consectetur mollitia autem esse
+                  dolorem cupiditate quibusdam?</p>
+              </div>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      </section>
+
+
+
+
     </div>
-    </section>
 
     <!-- FOOTER -->
-
     <footer class="py-4 mt-4">
       <p class="text-center m-0">© My Website, Inc</p>
     </footer>
-
-  </div>
 
   </div>
 
