--- a/m2/w2/d5/Homework-M2-W2-D5/index.html
+++ b/m2/w2/d5/Homework-M2-W2-D5/index.html
@@ -21,7 +21,7 @@
     <header>
 
       <!-- NAVBAR -->
-      <nav class="navbar shadow mb-5 sticky-top navbar-expand-lg">
+      <nav class="navbar shadow mb-5 fixed-top navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="#">My Website</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -34,9 +34,11 @@
               <a class="nav-link" href="#">This is Me!</a>
               <a class="nav-link" href="#">Collabs</a>
               <a class="nav-link" href="#">Testimonianze</a>
-              <i class="bi bi-linkedin m-2"></i>
-              <i class="bi bi-twitter m-2"></i>
-              <i class="bi bi-instagram m-2"></i>
+              <div class="d-flex">
+                <i class="bi bi-linkedin m-2"></i>
+                <i class="bi bi-twitter m-2"></i>
+                <i class="bi bi-instagram m-2"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -193,7 +195,7 @@
 
   </div>
 
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
